<resources>
    <!--<string name="app_name">HotelBookingAppOfHotel</string>-->
    <string name="app_name">Màn hình tất cả phòng</string>

    <!--======== Man hinh chi tiet da dat, da thanh toan, da huy ========-->
    <!-- Man hinh chi tiet da dat -->
    <string name="chitietdat">Thông tin chi tiết khách hàng đã đặt</string>
    <string name="hanchothanhtoan">Hạn chờ thanh toán đến trước</string>
    <string name="chothuethanhcong">Cho thuê thành công</string>

    <!-- Man hinh chi tiet da thanh toan -->
    <string name="chitietthanhtoan">Thông tin chi tiết khách hàng đã thanh toán</string>

    <!-- Man hinh chi tiet da huy -->
    <string name="chitiethuy">Thông tin chi tiết khách hàng đã hủy</string>

    <string name="thongtinnguoidat">Thông tin người đặt</string>
    <string name="manguoidat">Mã người đặt</string>
    <string name="tennguoidat">Tên người đặt</string>
    <string name="gioitinh">Giới tính</string>
    <string name="email">Email</string>
    <string name="ngayden">Ngày đến</string>
    <string name="ngaydi">Ngày đi</string>
    <string name="ngaySinh">Ngày sinh</string>
    <string name="quoctich">Quốc tịch</string>
    <string name="thongtinphong">Thông tin phòng</string>
    <string name="maphong">Mã phòng</string>
    <string name="tenphong">Tên phòng</string>
    <string name="songuoi">Số người</string>
    <string name="diadiem">Địa điểm</string>
    <string name="giathue">Giá thuê</string>
    <string name="tongphithanhtoan">Tổng phí thanh toán</string>
    <string name="dathanhtoan">Đã thanh toán</string>
    <string name="vnddem">VND / Đêm</string>
    <string name="vnd">VND</string>
    <string name="chothue">Cho thuê</string>
    <string name="huy">Hủy</string>
    <string name="hoantien">Hoàn tiền</string>

    <!--======== Man hinh danh sach cac khach hang da dat, da thanh toan, da huy ========-->
    <!-- Man hinh danh sach cac khach hang da dat -->
    <string name="danhsachdat">Danh sách các khách hàng đã đặt</string>

    <!-- Man hinh danh sach cac khach hang da thanh toan -->
    <string name="danhsachthanhtoan">Danh sách các khách hàng đã thanh toán</string>
    <string name="thanhtoantruoc">Thanh toán trước</string>
    <string name="thanhtoandu">Thanh toán đủ</string>
    <string name="hoantatthanhtoan">Hoàn tất thanh toán</string>

    <!-- Man hinh danh sach cac khach hang da huy -->
    <string name="danhsachhuy">Danh sách các khách hàng đã hủy</string>
    <string name="dahoantien">Đã hoàn tiền</string>
    <string name="chuahoantien">Chưa hoàn tiền</string>

    <string name="banmuontimgi">Bạn muốn tìm gì...</string>
    <string name="ngaydat">Ngày đặt</string>
    <string name="ngaythanhtoan">Ngày thanh toán</string>
    <string name="ngayhuy">Ngày hủy</string>

    <!--======== Man hinh dang nhap khach san =========-->
    <string name="taikhoan">Tài khoản</string>
    <string name="nhaptentaikhoan">Nhập tên tài khoản...</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="nhapmatkhau">Nhập mật khẩu...</string>
    <string name="dangnhap">Đăng nhập</string>

    <!--========== Bottom navigation ==========-->
    <string name="tatcaphong">Tất cả phòng</string>
    <string name="dadat">Đã đặt</string>
    <string name="dahuy">Đã hủy</string>

    <!--========== Custom dialog ==========-->
    <string name="thongbao">Bạn có muốn hủy lịch đặt phòng của người này không?</string>
    <string name="thongbaodangnhap">Tài khoản của bạn hiện đang bị khóa. Vui lòng liên hệ với nhà phát triển để biết thêm chi tiết.</string>
    <string name="Huy">Hủy</string>
    <string name="thoi">Thôi</string>

    <!-- Bottom navigation bar -->
    <string name="titleTatCaPhong">Tất cả phòng</string>
    <string name="titleDaDat">Đã đặt</string>
    <string name="titleDaThanhToan">Đã thanh toán</string>
    <string name="titleDaHuy">Đã huỷ</string>

    <!-- ====== Tat ca phong Screen ====== -->
    <string name="btn_quan_tri_khac">Quản trị khác</string>
    <string name="btn_them_phong">Thêm phòng</string>
    <string name="hint_text_search">Tìm kiếm phòng...</string>
    <string name="spn_loc_loai_phong">Lọc lại phòng</string>
    <string name="spn_loc_trang_thai">Lọc trạng thái</string>
    <string name="tv_ma_phong">Mã phòng</string>
    <string name="tv_ten_phong">Tên phòng</string>
    <string name="title_ten_phong">Trạng thái</string>

    <string-array name="array_test">
        <item>item 1</item>
        <item>item 2</item>
        <item>item 3</item>
    </string-array>

    <!-- Bottom action bar-->
    <string name="title_header_ma_phong">Mã phòng</string>
    <string name="title_header_ten_phong">Tên phòng</string>
    <string name="title_header_trang_thai">Trạng thái</string>

    <!-- ====== End tat ca phong Screen ====== -->

    <!-- Template fragment -->
    <string name="title_tat_ca_phong">Tat ca phong</string>
    <string name="title_da_dat">Da dat</string>
    <string name="title_da_thanh_toan">Da thanh toan</string>
    <string name="title_da_huy">Da huy</string>
    <string name="title_activity_cap_nhat_phong">CapNhatPhongActivity</string>

    <!-- ========== Man hinh cap nhat thong tin phong va man hinh them phong ========== -->
    <string name="title_toolbar_cap_nhat_phong">Cập nhật thông tin phòng</string>
    <string name="title_toolbar_them_phong">Thêm phòng</string>

    <string name="tv_ma_phong1">Mã phòng</string>
    <string name="tv_ten_phong1">Tên phòng</string>
    <string name="tv_trang_thai">Trạng thái</string>
    <string name="tv_gia_thue">Giá thuê</string>
    <string name="tv_don_vi_thue">VND/Đêm</string>
    <string name="tv_loai_phong">Loại phòng</string>
    <string name="tv_so_khach">Số khách</string>
    <string name="tv_cac_tien_nghi">Các tiện nghi</string>
    <string name="tv_mo_ta_phong">Mô tả phòng</string>
    <string name="tv_dia_chi">Địa chỉ</string>
    <string name="tv_tinh_thanh_pho">Tỉnh/Thành Phố</string>
    <string name="tv_vi_tri_ban_do">Vị trí bản đồ</string>
    <string name="tv_kinh_do">Kinh độ</string>
    <string name="tv_vi_do">Vĩ độ</string>
    <string name="tv_khuyen_mai">% Khuyến mãi</string>
    <string name="tv_anh_dai_dien">Ảnh đại diện</string>
    <string name="tv_bo_suu_tap">Bộ sưu tập</string>
    <string name="btn_xoa_phong">Xoá phòng</string>
    <string name="btn_cap_nhat">Cập nhật</string>
    <string name="tv_phan_tram">&#37;</string>

    <string name="hint_text_tv_ma_phong1">Nhập mã phòng...</string>
    <string name="hint_text_tv_ten_phong1">Nhập tên phòng...</string>
    <string name="hint_text_spn_trang_tha1">Chọn Trạng thái</string>
    <string name="hint_text_tv_gia_thue">Nhập giá thuê...</string>
    <string name="hint_text_spn_loai_phong">Chọn loại phòng</string>
    <string name="hint_text_tv_so_khach">Nhập số khách...</string>
    <string name="hint_text_btn_cac_tien_nghi">Chọn tiện nghi</string>
    <string name="hint_text_tv_mo_ta_phong">Nhập mô tả phòng...</string>
    <string name="hint_text_tv_dia_chi">Nhập địa chỉ...</string>
    <string name="hint_text_spn_tinh_thanh_pho">Chọn Tỉnh/Thành Phố</string>
    <string name="hint_text_tv_kinh_do">Kinh độ...</string>
    <string name="hint_text_tv_vi_do">Vĩ độ...</string>
    <string name="hint_text_tv_khuyen_mai">&#37;...</string>

    <!-- ========== End man hinh cap nhat thong tin phong va them phong ========== -->


    <!-- ========== Man hinh Quan tri khac ========== -->
    <string name="toolbar_title_quan_tri_khac">Quản trị khác</string>

    <!-- Cac tien nghi -->
    <string name="text_in_btn_cac_tien_nghi">Các tiện nghi</string>
    <string name="text_them_tien_nghi">Thêm tiện nghi</string>
    <string name="text_header_title_icon">Icon</string>
    <string name="text_header_title_ma_tien_nghi">Mã tiện nghi</string>
    <string name="text_header_title_tien_nghi">Tiện nghi</string>

    <!-- Dialog them tien nghi -->
    <string name="title_dialog_them_tien_nghi">Thêm tiện nghi</string>
    <string name="title_dialog_cap_nhat_tien_nghi">Cập nhật tiện nghi</string>
    <string name="hint_text_ma_tien_nghi">Nhập mã tiên nghi...</string>
    <string name="hint_text_tien_nghi">Nhập tiện nghi...</string>
    <string name="text_icon_tien_nghi">Icon tiện nghi</string>

    <!-- Loai phong -->
    <string name="text_in_btn_loai_phong">Loại phòng</string>
    <string name="text_in_btn_them_loai_phong">Thêm loại phòng</string>
    <string name="title_dialog_cap_nhat_loai_phong">Cập nhật loại phòng</string>
    <string name="text_header_title_ma_loai_phong">Mã loại phòng</string>
    <string name="text_header_title_loai_phong">Loại phòng</string>

    <!-- Dialog them loai phong -->
    <string name="title_dialog_them_loai_phong">Thêm loại phòng</string>
    <string name="hint_text_ma_loai">Nhập mã loại...</string>
    <string name="hint_text_loai_phong">Nhập loại phòng...</string>

    <!-- Thuoc tinh chung trong dialog -->
    <string name="title_dialog_thong_bao">Thông báo</string>
    <string name="btn_xoa">Xoá</string>
    <string name="btn_thoi">Thôi</string>
    <string name="btn_them">Thêm</string>
    <string name="text_thong_bao_xoa_loai_phong">Bạn có chắc xoá loại phòng này không? Sau khi xoá sẽ không thể phục hồi.</string>
    <string name="text_thong_bao_xoa_tien_nghi">Bạn có chắc xoá tiện nghi này không? Sau khi xoá sẽ không thể phục hồi.</string>
    <string name="text_thong_bao_xoa_phong">Bạn có chắc xoá phòng này không? Sau khi xoá sẽ không thể phục hồi.</string>
    <string name="text_thong_bao_xoa">Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    
    <!-- Dialog cho ngay khuyen mai -->
    <string name="title_dialog_them_ngay_khuyen_mai">Thêm ngày khuyến mãi</string>
    <string name="text_ngay_bat_dau_khuyen_mai">Ngày bắt đầu</string>
    <string name="text_ngay_ket_thuc">Ngày kết thúc</string>


    <!-- Custom ListView danh sach cac tien nghi va danh sach loai phong -->
    <!-- ========== End Man hinh Quan tri khac ========== -->
</resources>