<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activities.ManHinhChiTietDat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"></include>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_han_cho"
                android:layout_width="225dp"
                android:text="@string/hanchothanhtoan" />

            <TextView
                android:id="@+id/tvHanChoThanToan"
                style="@style/textview_han_cho"
                android:layout_width="180dp"
                android:text="19:30:45 - 20/11/2020"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            style="@style/textview_title"
            android:text="@string/thongtinnguoidat" />

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/tennguoidat" />

            <TextView
                android:id="@+id/tvTenNguoiDat"
                style="@style/textview_show_long"
                android:text="Nguyễn Thanh Vân" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/gioitinh" />

            <TextView
                android:id="@+id/tvGioiTinh"
                style="@style/textview_show_long"
                android:text="Nữ" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/email" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/textview_show_long"
                android:text="van@gmail.com" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/ngayden" />

            <TextView
                android:id="@+id/tvNgayDen"
                style="@style/textview_show_short"
                android:text="20/11/2020" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/ngaydi" />

            <TextView
                android:id="@+id/tvNgayDi"
                style="@style/textview_show_short"
                android:text="22/11/2020" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/ngaySinh" />

            <TextView
                android:id="@+id/tvNgaySinh"
                style="@style/textview_show_long"
                android:text="10/10/2000" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/quoctich" />

            <TextView
                android:id="@+id/tvQuocTich"
                style="@style/textview_show_long"
                android:text="Việt Nam" />
        </LinearLayout>

        <TextView
            style="@style/textview_title"
            android:text="@string/thongtinphong" />

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/tenphong" />

            <TextView
                android:id="@+id/tvTenPhong"
                style="@style/textview_show_long"
                android:text="PV201" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/songuoi" />

            <TextView
                android:id="@+id/tvSoNguoi"
                style="@style/textview_show_long"
                android:text="4" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/diadiem" />

            <TextView
                android:id="@+id/tvDiaDiem"
                style="@style/textview_show_long"
                android:text="Quận 2, TPHCM" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/giathue" />

            <TextView
                android:id="@+id/tvGiaThue"
                style="@style/textview_show_short"
                android:text="3500000" />

            <TextView
                style="@style/textview_model"
                android:layout_marginLeft="-120dp"
                android:text="@string/vnddem" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/tongphithanhtoan" />

            <TextView
                android:id="@+id/tvTongPhi"
                style="@style/textview_show_short"
                android:text="7000000" />

            <TextView
                style="@style/textview_model"
                android:layout_marginLeft="-120dp"
                android:text="@string/vnd" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <TextView
                style="@style/textview_model"
                android:text="@string/thanhtoantruoc" />

            <EditText
                android:id="@+id/edtDaThanhToan"
                style="@style/textview_show_short"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                style="@style/textview_model"
                android:layout_marginLeft="-120dp"
                android:text="@string/vnd" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_h"
            android:gravity="center">

            <Button
                android:id="@+id/btnChoThue"
                style="@style/button"
                android:layout_marginRight="20dp"
                android:text="@string/chothue" />

            <Button
                android:id="@+id/btnHuy"
                style="@style/button"
                android:text="@string/huy" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>