<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".activities.DanhSachThanhToanFragment">

    <include layout="@layout/toolbar" />

    <SearchView
        android:id="@+id/svTimKiem"
        style="@style/searchview"
        android:iconifiedByDefault="false"
        android:queryHint="@string/banmuontimgi" />

    <LinearLayout
        style="@style/linear_h"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnThanhToanTruoc"
            style="@style/button"
            android:text="@string/thanhtoantruoc" />

        <Button
            android:id="@+id/btnThanhToanDu"
            style="@style/button"
            android:layout_marginLeft="20dp"
            android:background="@drawable/custom_button_thanh_toan_du"
            android:text="@string/thanhtoandu" />
    </LinearLayout>

    <LinearLayout
        style="@style/linear_h"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center">

        <TextView
            style="@style/textview_row_listview"
            android:text="@string/tenphong" />

        <TextView
            style="@style/textview_row_listview"
            android:text="@string/tennguoidat" />

        <TextView
            style="@style/textview_row_listview"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:text="@string/ngaythanhtoan"
            tools:ignore="EllipsizeMaxLines" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDanhSachThanhToan"
        style="@style/recyclerview" />

</LinearLayout>