<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".activities.ManHinhDangNhap">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logo" />

    <LinearLayout
        style="@style/linear_h"
        android:layout_marginTop="50dp">

        <TextView
            style="@style/textview_model"
            android:layout_width="95dp"
            android:layout_marginTop="10dp"
            android:text="@string/taikhoan" />

        <EditText
            android:id="@+id/edtTaiKhoan"
            style="@style/edittext"
            android:hint="@string/nhaptentaikhoan" />
    </LinearLayout>

    <LinearLayout
        style="@style/linear_h"
        android:layout_marginBottom="20dp">

        <TextView
            style="@style/textview_model"
            android:layout_width="95dp"
            android:layout_marginTop="10dp"
            android:text="@string/matkhau" />

        <EditText
            android:id="@+id/edtMatKhau"
            style="@style/edittext"
            android:hint="@string/nhapmatkhau"
            android:inputType="textPassword" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvThongBao"
        style="@style/textView_thong_bao"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btnDangNhap"
        style="@style/button_dang_nhap"
        android:layout_gravity="center"
        android:text="@string/dangnhap" />
</LinearLayout>