<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TextView
        style="@style/textview_model"
        android:layout_width="300dp"
        android:text="@string/thongbao" />

    <LinearLayout
        style="@style/linear_h"
        android:gravity="center">

        <Button
            android:id="@+id/btnOk"
            style="@style/button_dialog"
            android:text="@string/Huy" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/button_dialog"
            android:text="@string/thoi" />
    </LinearLayout>

</LinearLayout>